--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,13 +14,13 @@ RUN npm install
 COPY . .
 
 # Compila la aplicación Angular
-RUN npm run build --prod
+RUN npm run build
 
 # Segunda etapa: servidor web ligero para servir la app
 FROM nginx:alpine AS production-stage
 
 # Copia los archivos generados por Angular al directorio de Nginx
-COPY --from=build-stage /app/dist/* /usr/share/nginx/html
+COPY --from=build-stage /app/dist/frontend/ /usr/share/nginx/html/
 
 # Copia el archivo de configuración si lo tienes
 # COPY nginx.conf /etc/nginx/nginx.conf
