feat: Update Docker configuration - Finish Front Dev configuration

--- a/.devcontainer/angular-container/Dockerfile
+++ b/.devcontainer/angular-container/Dockerfile
@@ -15,7 +15,7 @@ RUN apk add --no-cache bash curl git
 ENV NODE_ENV=development
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /app/frontend
 
 # Copy only the dependency files first to optimize Docker caching
 COPY ./frontend/package.json ./frontend/package-lock.json ./
@@ -24,7 +24,7 @@ COPY ./frontend/package.json ./frontend/package-lock.json ./
 RUN --mount=type=cache,target=/root/.npm npm install
 
 # Copy all application source files into the container
-COPY ./frontend .
+COPY . ../
 
 # Expose the port Angular uses for the dev server (default is 4200)
 EXPOSE 4200
