feat(auth): implement registration and login forms with validation feat(auth): add auth service for handling login and registration requests feat(dashboard): create dashboard layout with cards for navigation style(dashboard): add styles for dashboard header and cards test(auth): add unit tests for auth service and components test(dashboard): add unit tests for dashboard components and pages chore: set up environment configuration for production and development

--- a/.devcontainer/angular-container/devcontainer.json
+++ b/.devcontainer/angular-container/devcontainer.json
@@ -21,7 +21,8 @@
         "pranaygp.vscode-css-peek",
         "GitHub.vscode-pull-request-github",
         "humao.rest-client",
-        "cyrilletuzi.angular-schematics"
+        "cyrilletuzi.angular-schematics",
+        "ecmel.vscode-html-css"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash",
